--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="description_zoom_touch_close">description_zoom_touch_close</string>
     <string name="title_activity_zoom">ZoomActivity</string>
     <string name="title_activity_4_list">Activity4List</string>
+    <string name="title_activity_image_traning">ImageTraningActivity</string>
 
 </resources>
