--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="title_activity_zoom">ZoomActivity</string>
     <string name="title_activity_4_list">Activity4List</string>
     <string name="title_activity_image_traning">ImageTraningActivity</string>
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
 
 </resources>
