--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="title_activity_4_list">Activity4List</string>
     <string name="title_activity_image_traning">ImageTraningActivity</string>
     <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="show_pic_size">Show pic size</string>
 
 </resources>
