--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="show_pic_size">Show pic size</string>
     <string name="title_file_training">FileTraining</string>
     <string name="title_activity_file_training">FileTrainingActivity</string>
+    <string name="title_activity_pic_list_acivity">PicListAcivity</string>
 
 </resources>
