--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="title_activity_file_training">FileTrainingActivity</string>
     <string name="title_activity_pic_list_acivity">PicListAcivity</string>
     <string name="title_activity_setting">SettingActivity</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 
 </resources>
