--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Start Demo</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="title_activity_list">ListActivity</string>
     <string name="title_activity_image">ImageActivity</string>
     <string name="dummy_button">Dummy Button</string>
