--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
+    <string name="show_not_exist_item">Show not exist item</string>
+    <string name="hide_not_exist_item">Hide not exist item</string>
     <string name="title_activity_list">ListActivity</string>
     <string name="title_activity_image">ImageActivity</string>
     <string name="dummy_button">Dummy Button</string>
