--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="title_activity_setting">SettingActivity</string>
     <string name="open">open</string>
     <string name="close">close</string>
+    <string name="title_activity_timestamp">TimestampActivity</string>
 
 </resources>
