--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_about">About</string>
     <string name="show_not_exist_item">Show not exist item</string>
     <string name="hide_not_exist_item">Hide not exist item</string>
+    <string name="call_download">call download</string>
     <string name="title_activity_list">ListActivity</string>
     <string name="title_activity_image">ImageActivity</string>
     <string name="dummy_button">Dummy Button</string>
