optimize processBar display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="open">open</string>
     <string name="close">close</string>
     <string name="title_activity_timestamp">TimestampActivity</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_main2">Flow1000</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
