--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@
     <string name="title_activity_pic_section_list_activity_md">PicSectionListActivityMD</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+    <string name="tab_pending">pending</string>
 
 </resources>
