--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_pic_section_list_activity_md">PicSectionListActivityMD</string>
     <string name="tab_text_1">All</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_2">Exist</string>
     <string name="tab_pending">Pending</string>
 
 </resources>
